currency rate add

--- a/cmd/main/templates/addconversionrate.gohtml
+++ b/cmd/main/templates/addconversionrate.gohtml
@@ -129,7 +129,7 @@
                         </div>
                     {{end}}
                 {{end}}
-                <form method="post" action="/addconversionrate">
+                <form method="post" action="/addcurrencyrate">
                     <label>
                         <strong><i>CurrencyID From</i></strong>
                         <input type="number" min="1" name="currencyfrom" placeholder="CurrencyID From" required>
