--- a/cmd/main/templates/convertcurrency.gohtml
+++ b/cmd/main/templates/convertcurrency.gohtml
@@ -148,7 +148,7 @@
                 <h4>Go to <a href="/listcurrency">List Currency</a></h4>
                 <h4>Go to <a href="/listcurrencyrate">List Currency Rate</a></h4>
                 <h4>Go to <a href="/">Add Currency</a></h4>
-                <h4>Go to <a href="/addconversionrate">Add Conversion Rate</a></h4>
+                <h4>Go to <a href="/addcurrencyrate">Add Conversion Rate</a></h4>
             </div>
         </div>
     </div>
