--- a/cmd/main/templates/index.gohtml
+++ b/cmd/main/templates/index.gohtml
@@ -115,7 +115,7 @@
                 <br>
                 <h4>Go to <a href="/listcurrency">List Currency</a></h4>
                 <h4>Go to <a href="/listcurrencyrate">List Currency Rate</a></h4>
-                <h4>Go to <a href="/addconversionrate">Add Conversion Rate</a></h4>
+                <h4>Go to <a href="/addcurrencyrate">Add Conversion Rate</a></h4>
                 <h4>Go to <a href="/convertcurrency">Convert Currency</a></h4>
             </div>
         </div>
