--- a/cmd/main/templates/listcurrency.gohtml
+++ b/cmd/main/templates/listcurrency.gohtml
@@ -124,7 +124,7 @@
                 <br>
                 <h4>Go to <a href="/listcurrencyrate">List Currency Rate</a></h4>
                 <h4>Go to <a href="/">Add Currency</a></h4>
-                <h4>Go to <a href="/addconversionrate">Add Conversion Rate</a></h4>
+                <h4>Go to <a href="/addcurrencyrate">Add Conversion Rate</a></h4>
                 <h4>Go to <a href="/convertcurrency">Convert Currency</a></h4>
             </div>
         </div>
