--- a/cmd/main/templates/listcurrencyrate.gohtml
+++ b/cmd/main/templates/listcurrencyrate.gohtml
@@ -126,7 +126,7 @@
                 <br>
                 <h4>Go to <a href="/listcurrency">List Currency</a></h4>
                 <h4>Go to <a href="/">Add Currency</a></h4>
-                <h4>Go to <a href="/addconversionrate">Add Conversion Rate</a></h4>
+                <h4>Go to <a href="/addcurrencyrate">Add Conversion Rate</a></h4>
                 <h4>Go to <a href="/convertcurrency">Convert Currency</a></h4>
             </div>
         </div>
